2024-12-04T12:48:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12160065930 # 689
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-04
* notice: last 14d: unq all: 9 9
* notice: prev accum: outdated-unq outdated-all / unq all: 3796 8364 / 3806 8374
* notice: next accum: outdated-unq outdated-all / unq all: 3797 8365 / 3806 8374
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-20] / []

2024-12-02T12:49:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12119688250 # 685
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-02
* notice: last 14d: unq all: 9 10
* notice: prev accum: outdated-unq outdated-all / unq all: 3796 8364 / 3805 8373
* notice: next accum: outdated-unq outdated-all / unq all: 3796 8364 / 3806 8374
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-02]

2024-12-02T01:55:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12111252378 # 684
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-02
* notice: last 14d: unq all: 8 9
* notice: prev accum: outdated-unq outdated-all / unq all: 3795 8363 / 3804 8372
* notice: next accum: outdated-unq outdated-all / unq all: 3796 8364 / 3805 8373
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-11-18] / [2024-12-01]

2024-12-01T02:07:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12101347850 # 682