@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-12-04T12:48:13Z",
+  "timestamp" : "2024-12-05T01:53:37Z",
   "count_outdated" : 8365,
   "uniques_outdated" : 3797,
-  "count" : 8374,
-  "uniques" : 3806,
+  "count" : 8375,
+  "uniques" : 3807,
   "clones" : [
     {
       "timestamp": "2024-11-21T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2024-12-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
