@@ -1,5 +1,5 @@
 {
-  "count": 9,
+  "count": 10,
   "uniques": 9,
   "clones": [
     {
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2024-12-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
