@@ -1,3 +1,12 @@
+2024-12-05T01:53:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12171728125 # 690
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-05
+* notice: last 14d: unq all: 9 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 3797 8365 / 3806 8374
+* notice: next accum: outdated-unq outdated-all / unq all: 3797 8365 / 3807 8375
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-12-04]
+
 2024-12-04T12:48:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12160065930 # 689
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-04
